add prio topic to callable index plugin